# CRC32calculator

./: CMakeLists.txt  README.md
docs/: crc32_8c.html  crc32_8h.html  crc32_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  globals_type.html  index.html
docs/search/: all_0.js  all_1.js  files_0.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js  typedefs_0.js
include/: crc32.h
src/: crc32.c  crc32_atmega.c  crc32_tiva.c
test/: CMakeLists.txt  test.c
